--- a/BrainBusterSite/BrainBusterApp/static/menu.css
+++ b/BrainBusterSite/BrainBusterApp/static/menu.css
@@ -1,38 +1,53 @@
-/* styles.css */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow-y: hidden;
 }
-
 .container {
     width: 80%;
     margin: 0 auto;
     text-align: center;
     padding-top: 50px;
 }
-
 h1 {
     color: #333;
 }
-
 ul {
     list-style-type: none;
     padding: 0;
 }
-
 li {
     margin-bottom: 10px;
 }
-
 a {
     text-decoration: none;
     color: #007bff;
     font-weight: bold;
 }
-
 a:hover {
     color: #0056b3;
+}
+button {
+    padding: 10px 20px;
+    font-size: 18px;
+    margin: 10px;
+}
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 4.5em;
+    width: 25%;
+    height: 25%;
+}
+.impressum {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background-color: rgb(251, 251, 251);
 }
