--- a/BrainBusterSite/BrainBusterApp/templates/menu.html
+++ b/BrainBusterSite/BrainBusterApp/templates/menu.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Willkommen zur Quiz-App</h1>
         <ul>
-            <button onclick="window.location.href='start_quiz.html'">Quiz starten</button>
+            <button onclick="window.location.href='question.html'">Quiz starten</button>
             <button onclick="window.location.href='high_scores.html'">Bestenliste anzeigen</button>
             <button onclick="window.location.href='settings.html'">Einstellungen</button>
             <button onclick="window.location.href='about.html'">Über die App</button>
@@ -26,6 +26,9 @@
         <p>Anbieter:<br />IT-Solutions<br />Musterstraße 1<br />80999 München</p>
         <p>Kontakt:<br />Telefon: 089/1234567-8<br />Telefax: 089/1234567-9<br />E-Mail: mail@mustermann.de<br />Website: www.mustermann.de</p>
     </div>
+
+    <a href="{% url 'question' %}">Profile</a>
+
 
 </body>
 </html>
