html/css Anpassungen

--- a/BrainBusterSite/BrainBusterApp/templates/menu.html
+++ b/BrainBusterSite/BrainBusterApp/templates/menu.html
@@ -12,10 +12,9 @@
     <div class="container">
         <h1>Willkommen zur Quiz-App</h1>
         <ul>
-            <button onclick="window.location.href='question.html'">Quiz starten</button>
-            <button onclick="window.location.href='high_scores.html'">Bestenliste anzeigen</button>
-            <button onclick="window.location.href='settings.html'">Einstellungen</button>
-            <button onclick="window.location.href='about.html'">Über die App</button>
+            <button onclick="window.location.href='/question'">Quiz starten</button>
+            <button onclick="window.location.href='/high_scores'">Bestenliste anzeigen</button>
+            <button onclick="window.location.href='/settings'">Einstellungen</button>
         </ul>
     </div>
 
