--- a/BrainBusterSite/BrainBusterApp/templates/login.html
+++ b/BrainBusterSite/BrainBusterApp/templates/login.html
@@ -12,12 +12,17 @@
     <div class="login-wrap">
         <h2>Login</h2>
         
-        <div class="form">
+        <form method="post"> {% csrf_token %}
+          <div class="form"> 
           <input type="text" placeholder="Username" name="un" />
           <input type="password" placeholder="Password" name="pw" />
           <button> Sign in </button>
-          <a href="#"> <p> Don't have an account? Register </p></a>
+          <a href="register"> <p> Don't have an account? Register </p></a>
         </div>
+
+        {% if error_Message  %}
+        <p class="error">{{error_Message}}</p>
+        {% endif %} 
       </div>
 </body>
 </html>
