--- a/BrainBusterSite/BrainBusterApp/templates/question.html
+++ b/BrainBusterSite/BrainBusterApp/templates/question.html
@@ -1,96 +1,53 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BrainBuster - Quiz</title>
     <link rel="icon" type="image/x-icon" href="{% static 'icon.png' %}">
     <link rel="stylesheet" href="{% static 'question.css' %}">
 </head>
-<body onload="NextQuestion(0)">
-    <main>
-        <!-- creating a modal for when quiz ends -->
-        <div class="modal-container" id="score-modal">
-
-            <div class="modal-content-container">
-
-                <h1>Congratulations, Quiz Completed.</h1>
-
-                <div class="grade-details">
-                    <p>Attempts : 10</p>
-                    <p>Wrong Answers : <span id="wrong-answers"></span></p>
-                    <p>Right Answers : <span id="right-answers"></span></p>
-                    <p>Grade : <span id="grade-percentage"></span>%</p>
-                    <p ><span id="remarks"></span></p>
-                </div>
-
-                <div class="modal-button-container">
-                    <button onclick="closeScoreModal()">Continue</button>
-                </div>
-
+<body>
+    <div class="container">
+        <h1>Quizfrage</h1>
+        <div class="question">
+            <span data-v-11ba321c="" class="question-order">1.</span>
+            <p>Was ist die Hauptstadt von Frankreich?</p>
+        </div>
+        <div class="options">
+            <div class="option">
+                <input id="option1" class="radio-button" type="radio" name="answer">
+                <label for="option1"></label>
+                <span>Paris</span>
+            </div>
+            <div class="option">
+                <input id="option2" class="radio-button" type="radio" name="answer">
+                <label for="option2"></label>
+                <span>Berlin</span>
+            </div>
+            <div class="option">
+                <input id="option3" class="radio-button" type="radio" name="answer">
+                <label for="option3"></label>
+                <span>London</span>
+            </div>
+            <div class="option">
+                <input id="option4" class="radio-button" type="radio" name="answer">
+                <label for="option4"></label>
+                <span>Rom</span>
             </div>
         </div>
-<!-- end of modal of quiz details-->
 
-        <div class="game-quiz-container">
-
-            <div class="game-details-container">
-                <h1>Score : <span id="player-score"></span> / 10</h1>
-                <h1> Question : <span id="question-number"></span> / 10</h1>
-            </div>
-
-            <div class="game-question-container">
-                <h1 id="display-question"></h1>
-            </div>
-
-            <div class="game-options-container">
-
-               <div class="modal-container" id="option-modal">
-
-                    <div class="modal-content-container">
-                         <h1>Please Pick An Option</h1>
-
-                         <div class="modal-button-container">
-                            <button onclick="closeOptionModal()">Continue</button>
-                        </div>
-
+        <div class="div-outer-next-button">
+            <div class="div-inner-next-button">
+                <span>Press <strong>ENTER</strong></span>
+                <div class="append-icon">
+                    <div class="text-wrapper">
+                        <p>Next</p>
                     </div>
-
-               </div>
-
-                <span>
-                    <input type="radio" id="option-one" name="option" class="radio" value="optionA" />
-                    <label for="option-one" class="option" id="option-one-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-two" name="option" class="radio" value="optionB" />
-                    <label for="option-two" class="option" id="option-two-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-three" name="option" class="radio" value="optionC" />
-                    <label for="option-three" class="option" id="option-three-label"></label>
-                </span>
-
-
-                <span>
-                    <input type="radio" id="option-four" name="option" class="radio" value="optionD" />
-                    <label for="option-four" class="option" id="option-four-label"></label>
-                </span>
-
-
+                </div>
             </div>
-
-            <div class="next-button-container">
-                <button onclick="handleNextQuestion()">Next Question</button>
-            </div>
-
         </div>
-    </main>
-    <script src="index.js"></script>
+
+    </div>
 </body>
 </html>
