--- a/BrainBusterSite/BrainBusterApp/templates/register.html
+++ b/BrainBusterSite/BrainBusterApp/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -7,16 +8,48 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Register</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="{% static "register.css" %}}">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+        <h1>Registrierung</h1>
+
+        <form method="post">
+          {% csrf_token %}
+          <label for="firstname">First Name:</label>
+          <input type="text" name="firstname" id="firstname" required>
+          <br>
+
+          <label for="lastname">Last Name:</label>
+          <input type="text" name="lastname" id="lastname" required>
+          <br>
+
+          <label for="username">Benutzername:</label>
+          <input type="text" name="username" id="username" required>
+          <br>
+
+          <label for="email">E-Mail-Adresse:</label>
+          <input type="email" name="email" id="email" required>
+          <br>
+
+          <label for="password1">Passwort:</label>
+          <input type="password" name="password1" id="password1" required>
+          <br>
+
+          <label for="password2">Passwort wiederholen:</label>
+          <input type="password" name="password2" id="password2" required>
+          {% for message in messages %}
+          {% if "PasswordRegisterError" in message.tags %}
+          <p class="error-message" for="password2">{{ message }}</p>
+          {% endif %}
+          {% endfor %}
+          <br>
+          <button type="submit">Registrieren</button>
+        </form>
+        <p>
+          <a href="/login">Bereits registriert? Anmelden</a>
+        </p>
+      </body>
 </html>
