--- a/BrainBusterSite/BrainBusterApp/static/question.css
+++ b/BrainBusterSite/BrainBusterApp/static/question.css
@@ -13,6 +13,8 @@ body {
     flex-direction: column;
     justify-content: space-between !important;
     height: 100%;
+    background-color: beige;
+    border: 1px black;
 }
 
 h1 {
