--- a/BrainBusterSite/BrainBusterApp/templates/question.html
+++ b/BrainBusterSite/BrainBusterApp/templates/question.html
@@ -15,36 +15,19 @@
         <h1>Quizfrage</h1>
         <div class="question">
             <span data-v-11ba321c="" class="question-order">1.</span>
-            <p>Was ist die Hauptstadt von Frankreich?</p>
+            <p>{{ frage.Question_Text }}</p>
         </div>
         <div class="options">
+
+            {% for antwort in antworten %}
             <div class="form-check rounded p-3 mb-2 bg-light">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
-                    Madrid
+                    {{ antwort.Answer }}
                 </label>
             </div>
+            {% endfor %}
 
-            <div class="form-check rounded p-3 mb-2 bg-light">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Berlin
-                </label>
-            </div>
-
-            <div class="form-check rounded p-3 mb-2 bg-light">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                <label class="form-check-label" for="flexRadioDefault1">
-                    London
-                </label>
-            </div>
-
-            <div class="form-check rounded p-3 mb-2 bg-light">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-                <label class="form-check-label" for="flexRadioDefault2">
-                    Rom
-                </label>
-            </div>
         </div>
 
         <div class="div-outer-next-button">
@@ -57,7 +40,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 </html>
