--- a/BrainBusterSite/BrainBusterApp/static/question.css
+++ b/BrainBusterSite/BrainBusterApp/static/question.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
 }
-    
+
 .container {
     width: 40%;
     margin-left: auto;
@@ -18,6 +18,14 @@ body {
 h1 {
     color: #333;
     text-align: center;
+}
+
+.correct-answer {
+    color: #63B759;
+}
+
+.false-answer {
+    color: crimson;
 }
 
 .question {
@@ -75,9 +83,8 @@ h1 {
 }
 
 .option label {
-    width: 20px;
+    width: 100%;
     height: 20px;
-    border-radius: 50%;
     cursor: pointer;
 }
 
@@ -110,7 +117,6 @@ h1 {
 }
 
 .append-icon {
-    padding: 1.1px 1.3em;
     margin: 0;
     font-size: 1em;
     font-weight: 700;
@@ -118,11 +124,25 @@ h1 {
     background-color: #63B759 !important;
     color: white !important;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
-.text-wrapper {
+.button {
     margin: 0;
     margin-left: 0px;
     padding: 0;
     box-sizing: border-box;
+    background-color: transparent;
+    border: none;
+    padding: 0 20px;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: #52994a;
+}
+
+.button:focus {
+    border: none;
+    outline: none;
 }
