calculate total points

--- a/BrainBusterSite/BrainBusterApp/templates/score.html
+++ b/BrainBusterSite/BrainBusterApp/templates/score.html
@@ -12,6 +12,8 @@
         <h1>Dein Score:</h1>
         <p>Du hast {{ score }} von {{ total }} Fragen richtig beantwortet!</p>
 
+        <p>Deine Gesamtpunktzahl ist nun: {{user_points}}</p>
+
         <a href="/BrainBusterApp/">Zurück zur Startseite</a>
 
         <form  action="/BrainBusterApp/question/" method="POST">
