--- a/BrainBusterSite/BrainBusterApp/templates/score.html
+++ b/BrainBusterSite/BrainBusterApp/templates/score.html
@@ -14,7 +14,7 @@
 
         <p>Deine Gesamtpunktzahl ist nun: {{user_points}}</p>
 
-        <a href="/BrainBusterApp/">Zurück zur Startseite</a>
+        <a href="/">Zurück zur Startseite</a>
 
         <form  action="/BrainBusterApp/question/" method="POST">
             {% csrf_token %}
