--- a/BrainBusterSite/BrainBusterApp/templates/index.html
+++ b/BrainBusterSite/BrainBusterApp/templates/index.html
@@ -1,26 +1,14 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{% static 'icon.png' %}" />
-    <link rel="stylesheet" href="{% static 'question.css' %}">
-    <link rel="stylesheet" href="{% static 'index.css' %}">
-    <title>BrainBuster</title>
-</head>
-<body>
+{% extends 'base.html'%}
+{% block content %}
     <h1>BrainBuster Quiz</h1>
-    <div class="container">
-        <h2>Wähle eine Kategorie</h2>
-        <form action="/question/" method="POST">
-            {% csrf_token %}
-            <input class="button index-button" type="submit" name="category" value="Sport">
-            <input class="button index-button" type="submit" name="category" value="Geographie">
-        </form>
-        <p class="help-text">Drück <strong>h</strong> für Hilfe.</p>
-    </div>
+    <h2>Wähle eine Kategorie</h2>
+    <form action="/question/" method="POST">
+        {% csrf_token %}
+        <input class="button index-button" type="submit" name="category" value="Sport">
+        <input class="button index-button" type="submit" name="category" value="Geographie">
+    </form>
+    <p class="help-text">Drück <strong>h</strong> für Hilfe.</p>
+
     <div class="help-modal-container hidden">
         <div class="help-modal">
             <span>Um das Quiz zu starten, wähle eine Kategorie.</span>
@@ -31,6 +19,7 @@
 
 <div>
     {% if user.is_authenticated %}
+        <p>Angemeldet als <strong>{{ user }}</strong></p>
         <form action="{% url 'logout' %}" method="POST">
             {% csrf_token %}
             <button type="submit">Logout</button>
@@ -39,7 +28,4 @@
         <a href="{% url 'login' %}">Login</a>
     {% endif %}
 </div>
-
-    <script src="{% static 'index.js' %}"></script>
-</body>
-</html>
+{% endblock %}
